# azalea

./: .clang-format  CMakeLists.txt  CONTRIBUTING.md  README.md  SECURITY.md
Examples/: Build.az  Known.az  Simple.az
Include/: Compiler.h  Utilities.h
Include/Types/: AST.h  Arguments.h  Tokens.h
Include/Utilities/: Files.h  Numbers.h  Output.h  Strings.h
Source/: Arguments.c  Client.c  Compiler.c  Token.c  Tokenizer.c  Utilities.c
Source/Compiler/: AST.c  Arguments.c  Interpret.c  Tokens.c
Source/Targets/: Linux.c
Source/Targets/Linux/: Files.c  Output.c
Source/Utilities/: Numbers.c  Strings.c
Standard/: Build.az  Documenter.az  Filesystem.az  Print.az  Strings.az  Types.az
Standard/Source/: Print.az
